--- a/edit/fedinterop/algorithms.adoc
+++ b/edit/fedinterop/algorithms.adoc
@@ -27,12 +27,16 @@ The use of these algorithms is widespread at the time of authoring, but is known
 [IIP-ALG06]:: Implementations MUST support the key transport algorithms identified by the following URIs in conjunction with the use of XML Encryption <<XMLEnc>>:
 
 * ```http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p``` <<XMLEnc>>
-* ```http://www.w3.org/2009/xmlenc11#rsa-oaep``` <<XMLEnc11>> + 
- +
+* ```http://www.w3.org/2009/xmlenc11#rsa-oaep``` <<XMLEnc11>>
+
 The following DigestMethod algorithms MUST be supported for both of the above key transport algorithms:
+
 * ```http://www.w3.org/2001/04/xmlenc#sha256```
-* ```http://www.w3.org/2000/09/xmldsig#sha1``` +
- +
+
+The following DigestMethod algorithms SHOULD be supported for both of the above key transport algorithms for backward compatibility.
+
+* ```http://www.w3.org/2000/09/xmldsig#sha1```
+
 The default mask generation function (MGF1 with SHA1) MUST be supported for the KeyTransport algorithm identified by ```http://www.w3.org/2009/xmlenc11#rsa-oaep```.
 
 [IIP-ALG07]:: This document is not normative with respect to TLS security. It is, however, RECOMMENDED that implementers consider <<RFC7457>> and current best practice reflected in documents such as <<BetterCrypto>>.
