--- a/edit/fedinterop/algorithms.adoc
+++ b/edit/fedinterop/algorithms.adoc
@@ -14,8 +14,8 @@
 
 [IIP-ALG04]:: Implementations MUST support the block encryption algorithms identified by the following URIs in conjunction with the use of XML Encryption <<XMLEnc>>:
 
-* ```http://www.w3.org/2009/xmlenc11#aes128-gcm``` <<XMLEnc11>>
-* ```http://www.w3.org/2009/xmlenc11#aes256-gcm``` <<XMLEnc11>>
+* ```http://www.w3.org/2009/xmlenc11#aes128-gcm``` <<XMLEnc>>
+* ```http://www.w3.org/2009/xmlenc11#aes256-gcm``` <<XMLEnc>>
 
 [IIP-ALG05]:: Implementations MAY support the block encryption algorithms identified by the following URIs in conjunction with the use of XML Encryption <<XMLEnc>> for backwards compatibility:
 
@@ -27,7 +27,7 @@ The use of these algorithms is widespread at the time of authoring, but is known
 [IIP-ALG06]:: Implementations MUST support the key transport algorithms identified by the following URIs in conjunction with the use of XML Encryption <<XMLEnc>>:
 
 * ```http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p``` <<XMLEnc>>
-* ```http://www.w3.org/2009/xmlenc11#rsa-oaep``` <<XMLEnc11>>
+* ```http://www.w3.org/2009/xmlenc11#rsa-oaep``` <<XMLEnc>>
 
 The following DigestMethod algorithms MUST be supported for both of the above key transport algorithms:
 
