--- a/edit/fedinterop/references.adoc
+++ b/edit/fedinterop/references.adoc
@@ -22,9 +22,8 @@
 - [[[SAML-MDQ]]] IETF Internet-Draft, SAML Profile for the Metadata Query Protocol, October 2014. https://tools.ietf.org/html/draft-young-md-query-saml-07
 - [[[IdPDisco]]] OASIS Committee Specification, Identity Provider Discovery Service Protocol and Profile, March 2008. http://docs.oasis-open.org/security/saml/Post2.0/sstc-saml-idp-discovery.pdf
 - [[[RFC4051]]] IETF RFC 4051, Additional XML Security Uniform Resource Identifiers, April 2005. https://www.ietf.org/rfc/rfc4051.txt
-- [[[XMLEnc]]] D. Eastlake et al. XML Encryption Syntax and Processing. World Wide Web Consortium Recommendation, December 2002. https://www.w3.org/TR/xmlenc-core/
-- [[[XMLEnc11]]] D. Eastlake et al. XML Encryption Syntax and Processing Version 1.1. World Wide Web Consortium Recommendation, April 2013. https://www.w3.org/TR/xmlenc-core1/
-- [[[XMLSig]]] D. Eastlake et al. XML-Signature Syntax and Processing, Second Edition. World Wide Web Consortium Recommendation, June 2008. http://www.w3.org/TR/xmldsig-core/
+- [[[XMLEnc]]] D. Eastlake et al. XML Encryption Syntax and Processing Version 1.1. World Wide Web Consortium Recommendation, April 2013. https://www.w3.org/TR/xmlenc-core1/
+- [[[XMLSig]]] D. Eastlake et al. XML-Signature Syntax and Processing, Version 1.1. World Wide Web Consortium Recommendation, April 2013. https://www.w3.org/TR/xmldsig-core1/
 - [[[SAML-EC]]] IETF Internet Draft, SAML Enhanced Client SASL and GSS-API Mechanisms, October 2017. https://tools.ietf.org/html/draft-ietf-kitten-sasl-saml-ec-16
 - [[[BetterCrypto]]] BetterCrypto.org, Applied Crypto Hardening. https://bettercrypto.org
 - [[[RFC7457]]] IETF RFC 7457, Summarizing Known Attacks on Transport Layer Security (TLS) and Datagram TLS (DTLS), February 2015. https://www.ietf.org/rfc/rfc7457.txt
