--- a/edit/saml2int/notation.adoc
+++ b/edit/saml2int/notation.adoc
@@ -2,6 +2,8 @@
 
 The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "NOT RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted as described in BCP 14 <<RFC2119>> <<RFC8174>> when, and only when, they appear in all capitals, as shown here.
 
+This specification uses the following typographical conventions in text: `<ns:Element>`, `Attribute`, **Datatype**, `OtherCode`. The normative requirements of this specification are individually labeled with a unique identifier in the following form: *[IIP-EXAMPLE01]*. All information within these requirements should be considered normative unless it is set in _italic_ type.  Italicized text is non-normative and is intended to provide additional information that may be helpful in implementing the normative requirements.
+
 === References to SAML 2.0 specification
 
 When referring to elements from the SAML 2.0 core specification <<SAML2Core>>, the following syntax is used:
